--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
           name: $IMG.tar
-          path: $IMG.tar
+          path: /
 
