--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,10 +24,11 @@ jobs:
     - run: pwd
     - name: Save Docker image to tar file
       run: docker save $IMG -o out/$OUTPUT
+    - name: touch out
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-          name: $IMG.tar
+          name: out
           path: out
 
