--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,8 @@ on:
     branches: [ "master" ]
     
 env: 
-  IMG: spring-boot:3.4.0-java21
-  OUTPUT: sp_340_j_21.tar
+  IMG: openjdk:21-ea-oraclelinux7
+  OUTPUT: openjdk21.tar
 jobs:
 
   build:
