--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,8 @@ on:
     branches: [ "master" ]
     
 env: 
-  IMG: mysql:8.0
-  OUTPUT: mysql.tar
+  IMG: node:18-alpine 
+  OUTPUT: node:18-alpine .tar
 jobs:
 
   build:
