--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,8 @@ on:
     branches: [ "master" ]
     
 env: 
-  IMG: redis/redis-stack-server:6.2.6-v17
-  OUTPUT: redis-stack-server.tar
+  IMG: mongodb/mongodb-community-server:latest
+  OUTPUT: mongodb-community-server.tar
 jobs:
 
   build:
